--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,3 @@
-// Override and add customized styles in this file.
-//
-// You can also create SCSS files in the app/assets/stylesheets/custom/
-// folder and they will be loaded automatically.
+.locale .locale-form select {
+  background: darken($brand, 30%);
+}
